[gd_scene load_steps=26 format=2]

[ext_resource path="res://media/Font/Code Vein Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/credit.gd" type="Script" id=2]
[ext_resource path="res://prefab/uppu.tscn" type="PackedScene" id=3]
[ext_resource path="res://media/Block/orange_box.png" type="Texture" id=4]
[ext_resource path="res://media/Enemy/enemy_ct.png" type="Texture" id=5]
[ext_resource path="res://media/animu_goods/aqua.png" type="Texture" id=6]
[ext_resource path="res://media/animu_goods/dio01.jpg" type="Texture" id=7]
[ext_resource path="res://media/animu_goods/kazuma.png" type="Texture" id=8]
[ext_resource path="res://media/animu_goods/maika01.png" type="Texture" id=9]
[ext_resource path="res://media/animu_goods/megumin.png" type="Texture" id=10]
[ext_resource path="res://media/animu_goods/ranka.png" type="Texture" id=11]
[ext_resource path="res://media/animu_goods/senko.png" type="Texture" id=12]
[ext_resource path="res://media/animu_goods/shiro.png" type="Texture" id=13]
[ext_resource path="res://media/Sound/credit/credit_faces.png" type="Texture" id=14]
[ext_resource path="res://media/dew/dew_sad.png" type="Texture" id=15]
[ext_resource path="res://media/dew/dew_csgo.png" type="Texture" id=16]
[ext_resource path="res://media/dew/alex_csgo.png" type="Texture" id=17]
[ext_resource path="res://media/dew/bill_csgo.png" type="Texture" id=18]
[ext_resource path="res://media/dew/dew01.png" type="Texture" id=19]
[ext_resource path="res://media/dew/dew_baito.png" type="Texture" id=20]
[ext_resource path="res://media/dew/dew_buff.png" type="Texture" id=21]
[ext_resource path="res://script/uppu.gd" type="Script" id=22]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "stay_fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("stay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("uppu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="credit" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect_black" type="ColorRect" parent="."]
margin_right = 1360.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dew_sad" type="Sprite" parent="."]
position = Vector2( 192, 496 )
texture = ExtResource( 15 )
script = ExtResource( 22 )
speed = 2

[node name="uppu" parent="." instance=ExtResource( 3 )]
speed = 2

[node name="Label" type="Label" parent="uppu"]
margin_left = 496.0
margin_top = 352.0
margin_right = 896.0
margin_bottom = 412.0
custom_fonts/font = SubResource( 1 )
text = "DEW ADVENTURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 800.0
margin_right = 1024.0
margin_bottom = 923.0
custom_fonts/font = SubResource( 1 )
text = "Design
beatmil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 1296.0
margin_right = 1024.0
margin_bottom = 1419.0
custom_fonts/font = SubResource( 1 )
text = "Level Design
beatmil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 1808.0
margin_right = 1024.0
margin_bottom = 1931.0
custom_fonts/font = SubResource( 1 )
text = "Back-end Programming
beatmil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 2320.0
margin_right = 1024.0
margin_bottom = 2443.0
custom_fonts/font = SubResource( 1 )
text = "Front-end Programming
beatmil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 2832.0
margin_right = 1021.0
margin_bottom = 2955.0
custom_fonts/font = SubResource( 1 )
text = "Full-stack Programming
beatmil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 3312.0
margin_right = 1021.0
margin_bottom = 3435.0
custom_fonts/font = SubResource( 1 )
text = "Sound Design
beatmil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label14" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 3856.0
margin_right = 1021.0
margin_bottom = 3979.0
custom_fonts/font = SubResource( 1 )
text = "Art
beatmil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 4448.0
margin_right = 1021.0
margin_bottom = 4571.0
custom_fonts/font = SubResource( 1 )
text = "Texture
Value"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 5120.0
margin_right = 1021.0
margin_bottom = 5243.0
custom_fonts/font = SubResource( 1 )
text = "Sound Source
YouTube"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 7840.0
margin_right = 1021.0
margin_bottom = 8278.0
custom_fonts/font = SubResource( 1 )
text = "ANIME
Corpse party - tortured soul
The Helpful Fox Senko-san
Jojo bizarre adventure
Blend - S
KONOSUBA
Murenase! Seton Gakuen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 5632.0
margin_right = 1021.0
margin_bottom = 6070.0
custom_fonts/font = SubResource( 1 )
text = "GAME
Metal gear solid
Counter Strike - 
Global Offensive
Elsword
Kirby the amzing mirror
Rabi ribi"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 6512.0
margin_right = 1021.0
margin_bottom = 6950.0
custom_fonts/font = SubResource( 1 )
text = "MEME
Crab Rave
T  - pose"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 7152.0
margin_right = 1021.0
margin_bottom = 7590.0
custom_fonts/font = SubResource( 1 )
text = "Voice Actor (discord)
Dew
Bill
Alex"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="uppu"]
margin_left = 384.0
margin_top = 8656.0
margin_right = 1021.0
margin_bottom = 10417.0
custom_fonts/font = SubResource( 1 )
text = "ANIME (not related)
Date A Live
Plastic Memory
Angel Beat
Oremonogatari
Tsure dure children
High school of the dead
Left 4 dead
TEKKEN7
BlazBlue
Anakin Skywalker
Anakin Dirtwalker
Zombie from half life1
MAP GAME
CRAB RAVE MEME
PEWDIEPIE IS BACK!
I miss minecraft lets play
man
this list is long!
should it be longer?
yes
yes
yes
yes
yes
no
no
nah okay"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dio01" type="Sprite" parent="uppu"]
position = Vector2( 374, 12401 )
texture = ExtResource( 7 )

[node name="kazuma" type="Sprite" parent="uppu"]
position = Vector2( 1078, 12737 )
texture = ExtResource( 8 )

[node name="maika01" type="Sprite" parent="uppu"]
position = Vector2( 368, 13104 )
texture = ExtResource( 9 )

[node name="megumin" type="Sprite" parent="uppu"]
position = Vector2( 1078, 13489 )
texture = ExtResource( 10 )

[node name="ranka" type="Sprite" parent="uppu"]
position = Vector2( 406, 13873 )
texture = ExtResource( 11 )

[node name="senko" type="Sprite" parent="uppu"]
position = Vector2( 768, 13232 )
texture = ExtResource( 12 )

[node name="dew_csgo" type="Sprite" parent="uppu"]
position = Vector2( 944, 16624 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 16 )

[node name="dew_baito" type="Sprite" parent="uppu"]
position = Vector2( 704, 15584 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 20 )

[node name="alex_csgo" type="Sprite" parent="uppu"]
position = Vector2( 432, 16608 )
texture = ExtResource( 17 )

[node name="bill_csgo" type="Sprite" parent="uppu"]
position = Vector2( 720, 16080 )
texture = ExtResource( 18 )

[node name="dew01" type="Sprite" parent="uppu"]
position = Vector2( 416, 14352 )
texture = ExtResource( 19 )

[node name="shiro" type="Sprite" parent="uppu"]
position = Vector2( 1008, 14272 )
texture = ExtResource( 13 )

[node name="enemy_ct" type="Sprite" parent="uppu"]
position = Vector2( 560, 11456 )
texture = ExtResource( 5 )

[node name="aqua" type="Sprite" parent="uppu"]
position = Vector2( 774, 12097 )
texture = ExtResource( 6 )

[node name="credit_faces" type="Sprite" parent="uppu"]
position = Vector2( 704, 15088 )
scale = Vector2( 0.708333, 0.708333 )
texture = ExtResource( 14 )

[node name="orange_box" type="Sprite" parent="uppu"]
position = Vector2( 944, 10768 )
texture = ExtResource( 4 )

[node name="dew_buff" type="Sprite" parent="."]
position = Vector2( 736, 16032 )
texture = ExtResource( 21 )

[node name="stay" type="Node2D" parent="."]
position = Vector2( 496, 352 )

[node name="Label16" type="Label" parent="stay"]
margin_right = 400.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
text = "THANK YOU
FOR PLAYING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_start" type="Timer" parent="."]
wait_time = 11.5
one_shot = true
autostart = true

[node name="timer_end" type="Timer" parent="."]
wait_time = 151.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/stay_fade_in = SubResource( 2 )
anims/uppu_fade_in = SubResource( 3 )
[connection signal="timeout" from="timer_start" to="." method="_on_timer_start_timeout"]
[connection signal="timeout" from="timer_end" to="." method="_on_timer_end_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
